--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     function getFireballSpeed (isDownwind) {
       if (isDownwind) return 5;
-      return 2;      
+      return 2;
     }
 
     var wizardSpeed = 3;
@@ -199,6 +199,7 @@
     }
 
   </script>
+  <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
 </body>
