Задание 2: учёт замечаний

--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
     var fireballSize = 22;
 
     function getFireballSpeed (isDownwind) {
-      if (isDownwind) return 5;
+      if (isDownwind) {
+        return 5;
+      }
       return 2;
     }
 
