13. Учебный проект: в движении

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             <input type="file" name="avatar" accept="image/png, image/jpeg">
           </div>
           <label>
-            <input type="text" name="username" minlength="2" maxlength="25" required
-            class="setup-user-name"
+            <input type="text" name="username" minlength="2" maxlength="25" required class="setup-user-name"
               value="Синий Пендальф" />
           </label>
         </div>
@@ -204,7 +203,9 @@
     }
 
   </script>
-  <script src="js/setup.js"></script>
+  <script src="js/setup-similar-person.js"></script>
+  <script src="js/dialog.js"></script>
+  <script src="js/move-dialog.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 
