16. Учебный проект: pimp my mage

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
   </header>
 
   <div class="overlay setup hidden">
-    <form class="setup-wizard-form" method="post" action="https://javascript.pages.academy/code-and-magick"
-      enctype="multipart/form-data" autocomplete="off">
+    <form class="setup-wizard-form">
 
       <div class="setup-title">
         <div class="setup-user">
@@ -203,6 +202,7 @@
     }
 
   </script>
+  <script src="js/backend.js"></script>
   <script src="js/setup-similar-person.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/move-dialog.js"></script>
