--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
 
   </script>
   <script src="js/backend.js"></script>
+  <script src="js/wizard.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/setup-similar-person.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/move-dialog.js"></script>
